# apps/api/openapi.json
@@ -10,7 +10,9 @@
             "description": ""
           }
         },
-        "tags": ["Prometheus"]
+        "tags": [
+          "Prometheus"
+        ]
       }
     },
     "/bookmarks": {
@@ -39,7 +41,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       },
       "get": {
         "operationId": "BookmarksController_findUserBookmarks",
@@ -96,7 +100,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       }
     },
     "/bookmarks/{id}": {
@@ -124,7 +130,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       },
       "patch": {
         "operationId": "BookmarksController_updateBookmark",
@@ -160,7 +168,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       },
       "delete": {
         "operationId": "BookmarksController_deleteBookmark",
@@ -186,7 +196,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       }
     },
     "/bookmarks/{id}/restore": {
@@ -214,7 +226,9 @@
             }
           }
         },
-        "tags": ["Bookmarks"]
+        "tags": [
+          "Bookmarks"
+        ]
       }
     },
     "/folders": {
@@ -243,7 +257,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       },
       "get": {
         "operationId": "FoldersController_findUserFolders",
@@ -300,7 +316,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       }
     },
     "/folders/{id}": {
@@ -328,7 +346,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       },
       "patch": {
         "operationId": "FoldersController_updateFolder",
@@ -364,7 +384,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       },
       "delete": {
         "operationId": "FoldersController_deleteFolder",
@@ -390,7 +412,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       }
     },
     "/folders/{id}/restore": {
@@ -418,7 +442,9 @@
             }
           }
         },
-        "tags": ["Folders"]
+        "tags": [
+          "Folders"
+        ]
       }
     },
     "/tags": {
@@ -447,7 +473,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       },
       "get": {
         "operationId": "TagsController_findUserTags",
@@ -504,7 +532,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       }
     },
     "/tags/{id}": {
@@ -532,7 +562,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       },
       "patch": {
         "operationId": "TagsController_updateTag",
@@ -568,7 +600,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       },
       "delete": {
         "operationId": "TagsController_deleteTag",
@@ -594,7 +628,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       }
     },
     "/tags/{id}/restore": {
@@ -622,7 +658,9 @@
             }
           }
         },
-        "tags": ["Tags"]
+        "tags": [
+          "Tags"
+        ]
       }
     },
     "/metadata": {
@@ -651,7 +689,9 @@
             }
           }
         },
-        "tags": ["metadata"]
+        "tags": [
+          "metadata"
+        ]
       }
     }
   },
@@ -691,7 +731,57 @@
             }
           }
         },
-        "required": ["title", "url"]
+        "required": [
+          "title",
+          "url"
+        ]
+      },
+      "FolderDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "description": {
+            "type": "string"
+          }
+        },
+        "required": [
+          "id",
+          "name"
+        ]
+      },
+      "TagDto": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string"
+          },
+          "name": {
+            "type": "string"
+          },
+          "userId": {
+            "type": "string"
+          },
+          "createdAt": {
+            "format": "date-time",
+            "type": "string"
+          },
+          "updatedAt": {
+            "format": "date-time",
+            "type": "string"
+          }
+        },
+        "required": [
+          "id",
+          "name",
+          "userId",
+          "createdAt",
+          "updatedAt"
+        ]
       },
       "BookmarkDto": {
         "type": "object",
@@ -708,8 +798,14 @@
           "url": {
             "type": "string"
           },
-          "folderId": {
-            "type": "string"
+          "folder": {
+            "$ref": "#/components/schemas/FolderDto"
+          },
+          "tags": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/TagDto"
+            }
           },
           "userId": {
             "type": "string"
@@ -723,7 +819,14 @@
             "type": "string"
           }
         },
-        "required": ["id", "title", "url", "userId", "createdAt", "updatedAt"]
+        "required": [
+          "id",
+          "title",
+          "url",
+          "userId",
+          "createdAt",
+          "updatedAt"
+        ]
       },
       "PaginationMeta": {
         "type": "object",
@@ -768,22 +871,9 @@
             "maxLength": 500
           }
         },
-        "required": ["name"]
-      },
-      "FolderDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "description": {
-            "type": "string"
-          }
-        },
-        "required": ["id", "name"]
+        "required": [
+          "name"
+        ]
       },
       "UpdateFolderDto": {
         "type": "object",
@@ -806,30 +896,9 @@
             "maxLength": 100
           }
         },
-        "required": ["name"]
-      },
-      "TagDto": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": "string"
-          },
-          "name": {
-            "type": "string"
-          },
-          "userId": {
-            "type": "string"
-          },
-          "createdAt": {
-            "format": "date-time",
-            "type": "string"
-          },
-          "updatedAt": {
-            "format": "date-time",
-            "type": "string"
-          }
-        },
-        "required": ["id", "name", "userId", "createdAt", "updatedAt"]
+        "required": [
+          "name"
+        ]
       },
       "UpdateTagDto": {
         "type": "object",
@@ -855,7 +924,11 @@
             "type": "string"
           }
         },
-        "required": ["title", "description", "url"]
+        "required": [
+          "title",
+          "description",
+          "url"
+        ]
       }
     }
   }
