# apps/api/src/modules/bookmarks/dto/bookmark.dto.ts
@@ -1,9 +1,13 @@
+import { FolderDto } from "@/modules/folders/dto/folder.dto";
+import { TagDto } from "@/modules/tags/dto/tag.dto";
+
 export class BookmarkDto {
   id: string;
   title: string;
   description?: string;
   url: string;
-  folderId?: string;
+  folder?: FolderDto;
+  tags?: TagDto[];
   userId: string;
   createdAt: Date;
   updatedAt: Date;
